feat: Criando base para respostas padronizadas da API
